[package]
authors = [ "Tim Hoeppner" ]
name = "probe-run-defmt-fmt"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt-json-schema = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
atty = "0.2.14"
clap = { version = "3.1", features = ["derive"] }
chrono = "0.4"
log = "0.4"
colored = "2"
